--- a/chrome/tabbar/tabbar.css
+++ b/chrome/tabbar/tabbar.css
@@ -78,6 +78,7 @@
 
 /* vertically center buttons in tab bar */
 #TabsToolbar toolbarbutton,
+#TabsToolbar .toolbar-items toolbarbutton.toolbarbutton-1,
 /* >= 72 */
 #TabsToolbar .tabbrowser-arrowscrollbox::part(scrollbutton-up),
 #TabsToolbar .tabbrowser-arrowscrollbox::part(scrollbutton-down),
@@ -85,8 +86,8 @@
 #scrollbutton-up[part="scrollbutton-up"]:not(.menupopup-scrollbutton),
 #scrollbutton-down[part="scrollbutton-down"]:not(.menupopup-scrollbutton)
 {
-	margin-top: calc((var(--tab-min-height) - var(--button-size)) / 2) !important;
-	margin-bottom: calc((var(--tab-min-height) - var(--button-size)) / 2) !important;
+	margin-top: var(--tab-shadow-max-size) !important;
+	margin-bottom: var(--proton-tab-block-margin) !important;
 }
 
 .tabbrowser-tab
